添加一些配置

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,18 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "esnext",
-    "moduleResolution": "node",
-    "strict": true,
-    "jsx": "preserve",
-    "sourceMap": true,
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
-    "lib": ["esnext", "dom"],
-    "types": ["vite/client", "node"]
+    "target": "esnext", // 用来指定ts被编译为ES的版本
+    "module": "esnext", // 指定要使用的模块化的规范
+    "moduleResolution": "node", // 指定模块解析策略:“node”(node)或“classic”
+    "strict": true, // 所有严格检查的总开关
+    "jsx": "preserve", // 指定JSX代码生成:'preserve'、'react'或' reactive -native'。
+    "sourceMap": true, // 生成目标文件的sourceMap文件
+    "resolveJsonModule": true, // 包含导入的模块。json的扩展。
+    "esModuleInterop": true, //  为运行时babel生态系统兼容性提供“……importstar”和“……importdefault”帮助，并为类型系统兼容性启用“——allowSyntheticDefaultImports”。
+    "lib": ["esnext", "dom"], // 用来指定项目所用的库
+    "types": ["vite/client", "node"] // 加载的声明文件包
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  /*include用来指定哪些文件需要编译*/
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],   // ** 表示任意目录  *表示任意文件
+  // exclude指定不需要编译的文件
   "exclude": ["node_modules", "dist"]
 }
