--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@types/js-cookie": "^3.0.1",
     "@types/node": "^15.0.3",
     "element-plus": "^1.0.2-beta.44",
+    "js-cookie": "^3.0.1",
     "save": "^2.4.0",
     "vue": "^3.0.5",
     "vue-router": "^4.0.6",
@@ -18,6 +20,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.2",
     "@vue/compiler-sfc": "^3.0.5",
+    "axios": "^0.24.0",
     "node-sass": "^6.0.0",
     "sass": "^1.32.8",
     "sass-loader": "^10.1.1",
