--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.0-beta.0",
     "@types/js-cookie": "^3.0.1",
     "@types/node": "^15.0.3",
-    "element-plus": "^1.0.2-beta.44",
+    "element-plus": "^2.2.2",
     "js-cookie": "^3.0.1",
     "save": "^2.4.0",
-    "vue": "^3.0.5",
+    "vue": "^3.2.36",
     "vue-router": "^4.0.6",
     "vuex": "^4.0.0"
   },
