--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "save": "^2.4.0",
     "vue": "^3.2.36",
     "vue-router": "^4.0.6",
-    "vuex": "^4.0.0"
+    "vue-i18n": "^9.0.0",
+    "vuex": "^4.0.0",
+    "vuex-module-decorators": "^1.0.1",
+    "vuex-persistedstate": "^4.0.0-beta.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.2",
