--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "node-sass": "^6.0.0",
     "sass": "^1.32.8",
     "sass-loader": "^10.1.1",
+    "style-loader": "^2.0.0",
+    "style-resources-loader": "^1.4.1",
     "typescript": "^4.1.3",
     "vite": "^2.3.0",
     "vue-tsc": "^0.0.24"
