--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.0-beta.0",
-    "@types/js-cookie": "^3.0.1",
     "@types/node": "^18.0.0",
     "element-plus": "^2.2.2",
-    "js-cookie": "^3.0.1",
+    "js-cookie": "^2.2.1",
+    "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
     "save": "^2.4.0",
     "vue": "^3.2.36",
     "vue-router": "^4.0.6",
@@ -22,12 +23,14 @@
     "vuex-persistedstate": "^4.0.0-beta.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.2.2",
-    "@vue/compiler-sfc": "^3.0.5",
+    "@vitejs/plugin-vue": "^1.2.2",    
+    "@types/node": "^14.14.11",
+    "@types/js-cookie": "^2.2.6",
+    "@vue/compiler-sfc": "^3.0.0",
+    "@types/nprogress": "^0.2.0",
     "axios": "^0.24.0",
-    "node-sass": "^6.0.0",
-    "sass": "^1.32.8",
-    "sass-loader": "^10.1.1",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2",
     "style-loader": "^2.0.0",
     "style-resources-loader": "^1.4.1",
     "typescript": "^4.1.3",
