--- a/package.json
+++ b/package.json
@@ -14,20 +14,23 @@
     "js-cookie": "^2.2.1",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
+    "path-to-regexp": "^6.2.1",
+    "pinia": "^2.0.28",
     "save": "^2.4.0",
+    "screenfull": "^5.0.2",
     "vue": "^3.2.36",
-    "vue-router": "^4.0.6",
     "vue-i18n": "^9.0.0",
+    "vue-router": "^4.0.6",
     "vuex": "^4.0.0",
     "vuex-module-decorators": "^1.0.1",
     "vuex-persistedstate": "^4.0.0-beta.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.2.2",    
-    "@types/node": "^14.14.11",
     "@types/js-cookie": "^2.2.6",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@types/node": "^14.14.11",
     "@types/nprogress": "^0.2.0",
+    "@vitejs/plugin-vue": "^1.2.2",
+    "@vue/compiler-sfc": "^3.0.0",
     "axios": "^0.24.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
