--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.0-beta.0",
     "@types/node": "^18.0.0",
+    "axios-mapper": "^0.5.9",
     "echarts": "^5.4.1",
     "element-plus": "^2.2.2",
     "js-cookie": "^2.2.1",
