--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@element-plus/icons-vue": "^2.0.0-beta.0",
     "@types/node": "^18.0.0",
     "axios-mapper": "^0.5.9",
+    "babel-loader": "^9.1.2",
     "echarts": "^5.4.1",
     "element-plus": "^2.2.2",
     "js-cookie": "^2.2.1",
@@ -23,11 +24,13 @@
     "vue": "^3.2.36",
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.6",
+    "vue3-count-to": "^1.1.2",
     "vuex": "^4.0.0",
     "vuex-module-decorators": "^1.0.1",
     "vuex-persistedstate": "^4.0.0-beta.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
     "@types/js-cookie": "^2.2.6",
     "@types/node": "^14.14.11",
     "@types/nprogress": "^0.2.0",
