--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "js-cookie": "^2.2.1",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
+    "path-browserify": "^1.0.1",
     "path-to-regexp": "^6.2.1",
     "pinia": "^2.0.28",
     "save": "^2.4.0",
