--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview"
+    "serve": "vite --mode development",
+    "build": "vue-tsc --noEmit && vite build --mode production"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.0-beta.0",
