--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,6 @@
+# 环境
 NODE_ENV=development
-# VUE_APP_BASE_API = 'http://localhost:8024'
-VITE_APP_BASE_API = 'http://localhost:8024'
+# 后台地址
+VITE_BASE_API = 'http://localhost:8090'
+# 是否是跨域请求 Y为是，其他不是
+VITE_HTTP_PROXY = 'N' 
