--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,6 @@
+# 环境
 NODE_ENV=production
-VUE_APP_BASE_API = 'https://admin-tmpl-mock.rencaiyoujia.cn'
+# 后台地址
+VITE_BASE_API = 'http://10.2.39.35:8090'
+# 是否是跨域请求 Y为是，其他不是
+VITE_HTTP_PROXY = 'N' 
